# dj-git-crawler

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  TODO.md  entrypoint.sh  exp  pyproject.toml  pytest.ini  r  requirements-build.txt  requirements-dev.txt  run
.github/workflows/: build.yaml
crawler/: asgi.py  crawler.ini  settings.py  urls.py  wsgi.py
deploy/systemd/: README.md  celery.service  flower.service  gitcrawler.service
repos/: apps.py  celery.py  tests.py  views.py
repos/migrations/: 0001_initial.py
root/ssh/: id_rsa.enc  id_rsa.pub
scripts/: clone.py  drop.sql  first_run.py  gitlab.ini  ngnix.conf  prepo.py  refresh.py  sync_author_tags.py  t
stats/: __init__.py  admin.py  analyzer.py  celery.py  collector.py  indexer.py  models.py  tasks.py  urls.py  utils.py  views.py
stats/management/commands/: initapp.py
stats/migrations/: 0001_initial.py  0002_authorandstat.py  0002_auto_20201013_1906.py  0002_auto_20201014_1814.py  0002_auto_20201016_0129.py  0002_repository_gitweb_base_url.py  0002_repository_last_commit_at.py  0003_auto_20201014_2240.py  0003_auto_20201015_1632.py  0003_configentry_ini.py  0003_create_author_stats_view.py  0004_auto_20201014_2244.py  0004_job.py  0005_auto_20201014_2303.py  0005_auto_20210113_1037.py
tests/: conftest.py  settings.py  test.ini  test_indexer.py  test_local_repos.py  test_misc.py  test_repos.py  test_routes.py  test_stats.py  test_utils.py  utils.py
