[tool.poetry]
name = "dj-git-crawler"
version = "0.1.0"
description = "git indexer"
authors = ["Li Lin <guru.lin@gmail.com>"]
license = "ASL"

[tool.poetry.dependencies]
python = "^3.10"
django = "~4.0.7"
python-dotenv = "^0.14.0"
celery = {version = "~5.2", extras = ["redis"]}
django-celery-results = "^2.4.0"
django-celery-beat = "^2.3.0"
flower = "^1.2.0"
psycopg2 = "^2.9.3"
python-gitlab = "^2.5.0"
PyDriller = "^1.15.2"
gunicorn = "^20.0.4"
django-admin-interface = "^0.19.2"
PyGithub = "^1.53"
atlassian-python-api = "^1.17.6"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-debugger = "^4.0.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.1.1"
flake8-variables-names = "^0.0.4"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest-django = "^4.5.2"
pytest-django-ordering = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
